# hacthon-0

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  orchestrator.py  pyproject.toml  scheduler.py
.claude/: mcp.json  settings.local.json
.claude/hooks/: stop.py
AI_Employee_Vault/: .gitignore  Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/Briefings/: 2026-W08_CEO_Briefing.md  2026-W08_Weekly.md
AI_Employee_Vault/Done/: 20260210_013403_FILE_test_invoice_012724.md  20260210_013403_test_invoice.txt  20260210_023616_FILE_test_023514.md  20260211_132327_EMAIL_19c4460017d0_131832.md  20260211_132341_EMAIL_19c445a864bb_131832.md  20260211_132411_EMAIL_19c41ef6f217_131832.md  20260211_132425_EMAIL_19c3dfe68ba7_131832.md  20260211_132447_EMAIL_19c34597e1df_131832.md  20260211_132609_FB_POST_2026-02-11.md  (+18 more)
docs/: ARCHITECTURE.md  AZURE_VM_SETUP.md  DEMO.md  GMAIL_SETUP.md  LESSONS_LEARNED.md  LINKEDIN_SETUP.md  META_SETUP.md  ODOO_SETUP.md  TWITTER_SETUP.md  WHATSAPP_SETUP.md
mcp_servers/: email_server.py  odoo_server.py  social_server.py
scripts/: aci-caddy.yaml  ai-employee-cloud.service  demo_gate.sh  linkedin_auth.py  linkedin_login.html  linkedin_open_auth.py  meta_auth.py  odoo_backup.sh  vm_bootstrap.sh
skills/: linkedin_poster.py  meta_poster.py  task_state.py  twitter_poster.py  weekly_audit.py  whatsapp_notifier.py
utils/: __init__.py  audit.py  frontmatter.py  health_server.py  retry.py  vault_sync.py  whatsapp_webhook.py
watchers/: .gmail_processed_ids.json  base_watcher.py  filesystem_watcher.py  gmail_watcher.py
(+6 files in other folders)
